--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
         android:allowBackup="true"
@@ -16,6 +18,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GoogleMaps"
         tools:targetApi="31">
+        <activity
+            android:name=".activities.ProfileActivity"
+            android:exported="false" />
+
+        <service android:name=".services.NotificationService" />
+
         <activity
             android:name=".activities.MapActivity"
             android:exported="false" />
@@ -53,7 +61,7 @@
             android:name=".activities.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.GoogleMaps"></activity>
+            android:theme="@style/Theme.GoogleMaps" />
     </application>
 
 </manifest>
